<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#0101DF" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/icn_about_authors"
        android:contentDescription="@string/DescriptionLogo" />
    
    <TextView
        android:id="@+id/Etudiant1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phrase"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:text="@string/EtudiantNum1" 
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#ff0000"
        />
    
     <TextView
        android:id="@+id/Etudiant2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Etudiant1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/EtudiantNum2" 
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff0000" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phrase"
        android:layout_alignRight="@+id/Etudiant1"
        android:layout_below="@+id/Etudiant1"
        android:layout_marginTop="57dp"
        android:text="@string/phrase_information"
        android:textStyle="italic" 
        android:textColor="#FFFFFF"
        
        />

    <TextView
        android:id="@+id/phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/phrase_intro"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:background="@drawable/color_back"
        android:text="@string/retour" />

   

</RelativeLayout>