<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_match_demo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Menu_Activity" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_marginTop="80dp"
            >

            <Button
                android:id="@+id/btJouer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text_jouer"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             >
       

            <Button
                android:id="@+id/btSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SoundOff"
                android:textColor="#FFFFFF" />
        </TableRow>

            <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_marginTop="8dp"
            >
        
       
            

            <Button
                android:id="@+id/btScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text_Score"
                android:textColor="#FFFFFF" />
        </TableRow>
        
            <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_marginTop="8dp">
        

            <Button
                android:id="@+id/btQuitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text_Quitter"
                android:textColor="#FFFFFF" />

        </TableRow>
    </TableLayout>

</RelativeLayout>